# mmm_model

./: MANIFEST.in  README.md  __init__.py  ollies_optuna.ipynb  pipeline.py  pyproject.toml  setup.py
config/: core.py
datasets/: dummy_data_mmm.csv
ollies_model/: config.yml
ollies_model.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
