[tool.poetry]
name = "ollies_model"
version = "0.0.1"
description = "Ollies Marketing Mix"
authors = ["SD"]
readme = "README.md"
packages = [{include = "ollies_model"}]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.0"
isort = "^5.0"

[tool.pytest.ini_options]
minversion = "2.0"
addopts = "-rfEX -p pytester --strict-markers"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test", "Acceptance"]
python_functions = ["test"]
testpaths = ["tests"]
xfail_strict = true
filterwarnings = [
    "error",
    "default:Using or importing the ABCs:DeprecationWarning:unittest2.*",
    "default:Using or importing the ABCs:DeprecationWarning:pyparsing.*",
    "default:the imp module is deprecated in favour of importlib:DeprecationWarning:nose.*",
    "ignore:The distutils package is deprecated:DeprecationWarning",
    "ignore:.*U.*mode is deprecated:DeprecationWarning:(?!(pytest|_pytest))",
    "ignore:.*type argument to addoption.*:DeprecationWarning",
    "ignore:.*inspect.getargspec.*deprecated, use inspect.signature.*:DeprecationWarning",
    "ignore::pytest.PytestExperimentalApiWarning",
    "default:invalid escape sequence:DeprecationWarning",
    "ignore::_pytest.warning_types.PytestUnknownMarkWarning",
]

[tool.black]
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
lines_between_sections = 1
skip = "migrations"
